--- a/css/index.css
+++ b/css/index.css
@@ -108,17 +108,15 @@ p {
     grid-template-columns: repeat(3, 33% 33% 33%);
     grid-template-rows: 20vh;
     grid-template-areas: "footer";
-    background-color: #6a93cb;
-    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
   }
   footer {
-    background-color: lightblue;
     text-align: center;
     font-family: "Poppins", sans-serif;
     font-size: 17px;
     padding-bottom: 30px;
     padding-top: 30px;
     border: none;
+    background-color: #a4bfef;
   }
 }
 @media (min-width: 481px) and (max-width: 1023px) {
@@ -204,17 +202,15 @@ p {
     grid-template-columns: repeat(3, 33% 33% 33%);
     grid-template-rows: 20vh;
     grid-template-areas: "footer";
-    background-color: #6a93cb;
-    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
   }
   footer {
-    background-color: lightblue;
     text-align: center;
     font-family: "Poppins", sans-serif;
     font-size: 17px;
     padding-bottom: 30px;
     padding-top: 30px;
     border: none;
+    background-color: #a4bfef;
   }
 }
 @media (min-width: 1024px) {
@@ -300,17 +296,15 @@ p {
     grid-template-columns: repeat(3, 33% 33% 33%);
     grid-template-rows: 20vh;
     grid-template-areas: "footer";
-    background-color: #6a93cb;
-    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
   }
   footer {
-    background-color: lightblue;
     text-align: center;
     font-family: "Poppins", sans-serif;
     font-size: 17px;
     padding-bottom: 30px;
     padding-top: 30px;
     border: none;
+    background-color: #a4bfef;
   }
 }
 
