--- a/scss/clases.scss
+++ b/scss/clases.scss
@@ -1,25 +1,20 @@
-.link{
+@mixin link-m {
     color:black;
     font-size: 17px;
     font-family: 'Poppins', sans-serif;
     
 }
 
-.lista{
-    list-style-position: outside;   
+@mixin lista-m {list-style-position: outside;   
     text-align: left; 
     line-height: 27px;
-    list-style-type: none;
-} 
+    list-style-type: none;}
 
-p{
-    color: black;
-    font-size: 24px;
-    font-family: 'Poppins', sans-serif;
-    padding-bottom: 30px;
-}
+    @mixin listdos-m {color: black;
+        font-size: 16px;
+        list-style: none;
+        align-items: center; 
+        
+    }
 
-.listdos{color: black;
-font-size: 16px;
-list-style: none;
-align-items: center; }
+   
