--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,7 +4,7 @@
 @mixin grid-header-m { 
     display: grid;
     width: 100%;
-    height: 55vh;
+    height: 60vh;
     grid-template-columns: auto auto;
     align-items: center;
     
@@ -42,42 +42,70 @@
     padding-bottom: 30px;
     padding-top: 30px;
     border: none;
-    
-    
 }
+
+@mixin header-m {background-color: #a4bfef;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    padding-top: 20px;
+    margin-bottom: 50px;
+    border: none;}
+
+@mixin grid-produc-m{display: grid;
+    width: 100%;
+    grid-template-columns:25% 35%;
+    grid-template-rows:45vh;
+    justify-content: center;
+    padding-top: 10vh;
+    justify-content: space-evenly;
+    list-style: none;
+    padding-bottom: 10vh}
+
+
+
+
+
+
+
+
+
 
 
 
 
 @media (max-width:480px){.grid-header{
     @include grid-header-m();
+    height: 75vh;
 }
 
-header{
-    background-color: #a4bfef;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    margin-bottom: 50px;
-    border: none;}
+.link{@include link-m();
+    font-size: 12px;
+    text-align: center;    
+}
+ 
+header{@include header-m();
+    margin-bottom: 45px;
+}
+
 
 .navegacion{
     justify-content: center;
     padding-bottom: 60px;
-     
+    font-size: 14px; 
+
         ul{
             list-style: none;
             }}
         
-.menu{@include menu-m();
+.menu{
+   @include menu-m();
  }
 
  .menu li:hover .submenu{
     visibility: visible;
     opacity: 1;
 }
-
 
 .submenu{
         position: absolute;
@@ -95,49 +123,56 @@ header{
             }}
 
 .grid-produc{
-display: grid;
-width: 100%;
-grid-template-columns:25% 35%;
-grid-template-rows:45vh;
-justify-content: center;
-padding-top: 10vh;
-justify-content: space-evenly;
-list-style: none;
-padding-bottom: 10vh;    
+@include grid-produc-m();   
 }
 main{
 font-family:'Poppins', sans-serif;
-font-size: 14px;
+font-size: 12px;
 text-align: center;
 border: none   
 }
 
-.grid-footer{@include grid-footer-m();
+.grid-footer{
+    @include grid-footer-m();
+}
+footer{@include footer-m();
+    background-color:#92b4f0;
 }
 
-footer{@include footer-m();
-    background-color:#a4bfef
+.listdos{
+    @include listdos-m();
+    font-size: 11px;
+}
 
-}}
+}
+
+
+
+
+
+
+
+
 
 
 
 @media (min-width:481px) and (max-width:1023px){.grid-header{
     @include grid-header-m();
+    height: 70vh
+}
+
+.link{@include link-m();
+    font-size: 14px;
+    text-align: center;    
 }
  
 header{
-    background-color: #a4bfef;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    margin-bottom: 50px;
-    border: none;}
+ @include header-m();}
 
 .navegacion{
     justify-content: center;
-    padding-bottom: 60px;
+    padding-bottom: 50px;
+    font-size: 16px; 
      
         ul{
             list-style: none;
@@ -169,15 +204,8 @@ header{
             }}
 
 .grid-produc{
-display: grid;
-width: 100%;
-grid-template-columns:25% 35%;
-grid-template-rows:45vh;
-justify-content: center;
-padding-top: 10vh;
-justify-content: space-evenly;
-list-style: none;
-padding-bottom: 10vh;    
+        @include grid-produc-m();  
+          
 }
 main{
 font-family:'Poppins', sans-serif;
@@ -190,36 +218,54 @@ border: none
     @include grid-footer-m();
 }
 footer{@include footer-m();
-    background-color:#a4bfef
-}}
-
-
-
-
-
-@media (min-width:1024px){.grid-header{
-    @include grid-header-m();
+    background-color:#92b4f0
 }
 
-header{
-    background-color: #a4bfef;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
+.listdos{
+    @include listdos-m();
+    font-size: 14px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width:1024px){
+
+.link{@include link-m();
     font-size: 17px;
-    padding-top: 20px;
-    margin-bottom: 50px;
-    border: none;}
+    text-align: center;    
+}
+.grid-header{
+    @include grid-header-m();
+    height: 70vh;
+}
+ 
+header{
+   @include header-m();
+    padding-right: 0px;
+}
 
 .navegacion{
     justify-content: center;
     padding-bottom: 60px;
-     
+    font-size: 18px; 
+    
         ul{
             list-style: none;
             }}
         
 .menu{
-    @include menu-m();
+   @include menu-m();
  }
 
  .menu li:hover .submenu{
@@ -244,19 +290,13 @@ header{
             }}
 
 .grid-produc{
-display: grid;
-width: 100%;
-grid-template-columns:25% 35%;
-grid-template-rows:45vh;
-justify-content: center;
-padding-top: 10vh;
-justify-content: space-evenly;
-list-style: none;
-padding-bottom: 10vh;    
+@include grid-produc-m();  
 }
+
+
 main{
 font-family:'Poppins', sans-serif;
-font-size: 14px;
+font-size: 17px;
 text-align: center;
 border: none   
 }
@@ -264,9 +304,13 @@ border: none
 .grid-footer{
     @include grid-footer-m();
 }
-footer{
-@include footer-m();
-background-color:#a4bfef
+footer{@include footer-m();
+    background-color:#92b4f0;
 
-}   
+}
+
+.listdos{
+    @include listdos-m();
+}
+
 }
