--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,11 @@
 
 @import "clases";
 
+@mixin imagenes-m{
+    width: 190px;
+    height: 210px;
+}
+
 @mixin grid-header-m { 
     display: grid;
     width: 100%;
@@ -76,7 +81,7 @@
 
 @media (max-width:480px){.grid-header{
     @include grid-header-m();
-    height: 75vh;
+    height: 36vh;
 }
 
 .link{@include link-m();
@@ -144,6 +149,12 @@ footer{@include footer-m();
     font-size: 11px;
 }
 
+.imagenes{@include imagenes-m();
+    width: 100px;
+    height: 130px;
+
+}
+
 }
 
 
@@ -158,7 +169,7 @@ footer{@include footer-m();
 
 @media (min-width:481px) and (max-width:1023px){.grid-header{
     @include grid-header-m();
-    height: 70vh
+    height: 16vh
 }
 
 .link{@include link-m();
@@ -226,6 +237,11 @@ footer{@include footer-m();
     font-size: 14px;
 }
 
+.imagenes{@include imagenes-m();
+    width: 150px;
+    height: 180px;
+}
+
 }
 
 
@@ -247,18 +263,22 @@ footer{@include footer-m();
 }
 .grid-header{
     @include grid-header-m();
-    height: 70vh;
+    height: 35vh;
+    margin: 0px;
+    
 }
  
 header{
    @include header-m();
-    padding-right: 0px;
+    
 }
 
 .navegacion{
-    justify-content: center;
+
+    align-items:flex-start;
     padding-bottom: 60px;
-    font-size: 18px; 
+    font-size: 17px;
+    
     
         ul{
             list-style: none;
@@ -298,7 +318,8 @@ main{
 font-family:'Poppins', sans-serif;
 font-size: 17px;
 text-align: center;
-border: none   
+margin: 0px;
+padding-top: 5vh
 }
 
 .grid-footer{
@@ -312,5 +333,7 @@ footer{@include footer-m();
 .listdos{
     @include listdos-m();
 }
+
+.imagenes{@include imagenes-m()}
 
 }
