--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,7 +9,6 @@
 @mixin grid-header-m { 
     display: grid;
     width: 100%;
-    height: 60vh;
     grid-template-columns: auto auto;
     align-items: center;
     
@@ -81,7 +80,8 @@
 
 @media (max-width:480px){.grid-header{
     @include grid-header-m();
-    height: 36vh;
+    height: 32vh;
+    
 }
 
 .link{@include link-m();
@@ -139,6 +139,7 @@ border: none
 
 .grid-footer{
     @include grid-footer-m();
+    font-size: 14px;
 }
 footer{@include footer-m();
     background-color:#92b4f0;
@@ -169,7 +170,7 @@ footer{@include footer-m();
 
 @media (min-width:481px) and (max-width:1023px){.grid-header{
     @include grid-header-m();
-    height: 16vh
+    height: 36vh
 }
 
 .link{@include link-m();
@@ -227,6 +228,7 @@ border: none
 
 .grid-footer{
     @include grid-footer-m();
+    font-size: 15px;
 }
 footer{@include footer-m();
     background-color:#92b4f0
