--- a/css/index.css
+++ b/css/index.css
@@ -2,10 +2,9 @@
   .grid-header {
     display: grid;
     width: 100%;
-    height: 60vh;
     grid-template-columns: auto auto;
     align-items: center;
-    height: 36vh;
+    height: 32vh;
   }
   .link {
     color: black;
@@ -91,6 +90,7 @@
     grid-template-columns: repeat(3, 33% 33% 33%);
     grid-template-rows: 20vh;
     grid-template-areas: "footer";
+    font-size: 14px;
   }
   footer {
     text-align: center;
@@ -119,10 +119,9 @@
   .grid-header {
     display: grid;
     width: 100%;
-    height: 60vh;
     grid-template-columns: auto auto;
     align-items: center;
-    height: 16vh;
+    height: 36vh;
   }
   .link {
     color: black;
@@ -207,6 +206,7 @@
     grid-template-columns: repeat(3, 33% 33% 33%);
     grid-template-rows: 20vh;
     grid-template-areas: "footer";
+    font-size: 15px;
   }
   footer {
     text-align: center;
@@ -242,7 +242,6 @@
   .grid-header {
     display: grid;
     width: 100%;
-    height: 60vh;
     grid-template-columns: auto auto;
     align-items: center;
     height: 35vh;
