--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,6 @@
   .menu li {
     position: relative;
     display: inline-block;
-    color: #DE3939;
   }
   .menu li a {
     display: block;
@@ -46,7 +45,7 @@
     text-decoration: none;
   }
   .menu li a:hover {
-    color: #CE7D35;
+    color: #DE3939;
     transition: all 0.3s;
   }
   .menu li:hover .submenu {
@@ -63,7 +62,7 @@
   .submenu li a {
     display: block;
     padding: 15px;
-    color: #fff;
+    background-color: #a4bfef;
     font-family: "Poppins", sans-serif;
     text-decoration: none;
   }
@@ -153,7 +152,6 @@
   .menu li {
     position: relative;
     display: inline-block;
-    color: #DE3939;
   }
   .menu li a {
     display: block;
@@ -162,7 +160,7 @@
     text-decoration: none;
   }
   .menu li a:hover {
-    color: #CE7D35;
+    color: #DE3939;
     transition: all 0.3s;
   }
   .menu li:hover .submenu {
@@ -179,7 +177,7 @@
   .submenu li a {
     display: block;
     padding: 15px;
-    color: #fff;
+    background-color: #a4bfef;
     font-family: "Poppins", sans-serif;
     text-decoration: none;
   }
@@ -270,7 +268,6 @@
   .menu li {
     position: relative;
     display: inline-block;
-    color: #DE3939;
   }
   .menu li a {
     display: block;
@@ -279,7 +276,7 @@
     text-decoration: none;
   }
   .menu li a:hover {
-    color: #CE7D35;
+    color: #DE3939;
     transition: all 0.3s;
   }
   .menu li:hover .submenu {
@@ -291,12 +288,12 @@
     width: 120%;
     visibility: hidden;
     opacity: 0;
+    background-color: #a4bfef;
     transition: opacity 0.5s;
   }
   .submenu li a {
     display: block;
     padding: 15px;
-    color: #fff;
     font-family: "Poppins", sans-serif;
     text-decoration: none;
   }
@@ -343,6 +340,11 @@
   .imagenes {
     width: 190px;
     height: 210px;
+  }
+  .div-nos {
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
   }
 }
 
