--- a/scss/index.scss
+++ b/scss/index.scss
@@ -164,6 +164,40 @@ footer{@include footer-m();
     height: 130px;
 
 }
+.div-nos{@include div-m();
+}
+
+form{
+    width: 80%;
+    margin: auto;
+    background-color: #a4bfef;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+}
+
+input, textarea{
+    width:80%;
+    margin-bottom: 15px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: none;
+}
+
+textarea{
+    min-height: 80px;
+    max-height: 120px;
+    max-width: 100%;
+}
+
+#boton{background-color: #DE3939;
+    padding: 15px;
+}
+
+#boton:hover{
+    cursor: pointer;
+}
 
 }
 
@@ -252,6 +286,41 @@ footer{@include footer-m();
 .imagenes{@include imagenes-m();
     width: 150px;
     height: 180px;
+}
+
+.div-nos{@include div-m();
+}
+
+form{
+    width: 450px;
+    margin: auto;
+    background-color: #a4bfef;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+}
+
+input, textarea{
+    width:80%;
+    margin-bottom: 15px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: none;
+}
+
+textarea{
+    min-height: 80px;
+    max-height: 120px;
+    max-width: 100%;
+}
+
+#boton{background-color: #DE3939;
+    padding: 15px;
+}
+
+#boton:hover{
+    cursor: pointer;
 }
 
 }
@@ -353,5 +422,36 @@ footer{@include footer-m();
 .div-nos{@include div-m();
 }
 
+form{
+    width: 450px;
+    margin: auto;
+    background-color: #a4bfef;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+}
+
+input, textarea{
+    width:80%;
+    margin-bottom: 15px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: none;
+}
+
+textarea{
+    min-height: 80px;
+    max-height: 120px;
+    max-width: 100%;
+}
+
+#boton{background-color: #DE3939;
+    padding: 15px;
+}
+
+#boton:hover{
+    cursor: pointer;
+}
 
 }
