--- a/scss/index.scss
+++ b/scss/index.scss
@@ -199,6 +199,9 @@ textarea{
     cursor: pointer;
 }
 
+.inp{width: 20%;
+}
+
 }
 
 
@@ -321,6 +324,9 @@ textarea{
 
 #boton:hover{
     cursor: pointer;
+}
+
+.inp{width: 20%;
 }
 
 }
@@ -452,6 +458,9 @@ textarea{
 
 #boton:hover{
     cursor: pointer;
+}
+
+.inp{width: 20%;
 }
 
 }
